<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple drawing for kids</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="new_title">New drawing</string>
    <string name="new_warning">Start new drawing?\n(you will lose the current drawing)</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="save_title">Save drawing</string>
    <string name="open_title">Open old drawing</string>
    <string name="save_warning">Save drawing to device Gallery?</string>
    <string name="open_warning">Your work will be lost.\n Do you want to continue ?</string>
    <string name="save_succes">Drawing saved to Gallery!</string>
    <string name="save_failed">Oops! Image could not be saved.</string>
    <string name="stroke_size">Tool thickness:</string>
    <string name="stroke">Thickness</string>
    <string name="open">Open</string>
</resources>
