<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ccc2b3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="55dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:gravity="left">

                    <ImageButton
                        android:id="@+id/new_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/new_default"
                        android:contentDescription="@string/start_new" />

                    <ImageButton
                        android:id="@+id/save_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/save_default"
                        android:contentDescription="@string/save" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:gravity="right">

                    <ImageButton
                        android:id="@+id/draw_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="2dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/brush_selected"
                        android:contentDescription="@string/brush"
                        android:onClick="brushClicked" />

                    <ImageButton
                        android:id="@+id/erase_btn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="2dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/rubber_default"
                        android:contentDescription="@string/erase"
                        android:onClick="rubberClicked" />

                    <LinearLayout
                        android:id="@+id/stroke_layout"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/border_default"
                        android:gravity="center"
                        android:clickable="true"
                        android:onClick="strokeClicked">

                        <ImageButton
                            android:id="@+id/stroke_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="0dp"
                            android:layout_marginRight="2dp"
                            android:layout_marginTop="2dp"
                            android:adjustViewBounds="false"
                            android:background="@drawable/medium"
                            android:contentDescription="@string/stroke" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <cz.hcs.app.simpledrawforkids.DrawingView
                android:id="@+id/drawing"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:background="#FFFFFFFF" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                !-- Top Row -->

                <LinearLayout
                    android:id="@+id/paint_colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF660000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FF660000" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFF0000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FFFF0000" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFff00ff"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FFFF00FF" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFF6600"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FFFF6600" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFFCC00"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FFFFCC00" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF009900"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FF009900" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF52FF52"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FF52FF52" />

                </LinearLayout>
                <!-- Bottom Row -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF009999"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FF009999" />
                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FF0000FF"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FF0000FF" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:background="#FF990099"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:layout_margin="2dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FF990099" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFF6666"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FFFF6666" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:layout_margin="2dp"
                        android:background="#FFFFFFFF"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FFFFFFFF" />

                    <ImageButton
                        android:layout_width="@dimen/large_brush"
                        android:layout_height="@dimen/large_brush"
                        android:background="#FF787878"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:layout_margin="2dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FF787878" />


                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="#FF000000"
                        android:contentDescription="@string/paint"
                        android:onClick="paintClicked"
                        android:layout_margin="2dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/border_paint_default"
                        android:tag="#FF000000" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </FrameLayout>
</FrameLayout>
